fix(frontend/mailbox): overflow due to word wrap

--- a/www/src/pages/mails/style.module.scss
+++ b/www/src/pages/mails/style.module.scss
@@ -60,7 +60,12 @@
       }
     }
 
-    & > .content { margin: 0 }
+    & > .content {
+      margin: 0;
+      word-wrap: break-word;
+
+      & > * { max-width: 100% }
+    }
   }
 
   & li:not(:last-of-type) {
